--- a/examples/checkers/pom.xml
+++ b/examples/checkers/pom.xml
@@ -32,7 +32,7 @@
         <!-- Game API (for GameFactory, GameMaster, etc.) -->
         <dependency>
             <groupId>com.lightningfirefly</groupId>
-            <artifactId>game-api</artifactId>
+            <artifactId>engine-adapter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
