--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <module>lightning-engine/api-acceptance-test</module>
         <module>lightning-engine/gui-acceptance-test</module>
         <module>game-renderer</module>
-        <module>engine-api</module>
+        <module>engine-adapter</module>
         <module>test-game-module</module>
         <module>game-app</module>
         <module>examples</module>
