--- a/engine-adapter/pom.xml
+++ b/engine-adapter/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>game-api</artifactId>
+    <artifactId>engine-adapter</artifactId>
 
     <properties>
         <maven.compiler.source>25</maven.compiler.source>
