--- a/lightning-engine/engine-internal/pom.xml
+++ b/lightning-engine/engine-internal/pom.xml
@@ -70,7 +70,7 @@
         </dependency>
         <dependency>
             <groupId>com.lightningfirefly</groupId>
-            <artifactId>game-api</artifactId>
+            <artifactId>engine-adapter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
