--- a/test-game-module/pom.xml
+++ b/test-game-module/pom.xml
@@ -24,7 +24,7 @@
     <dependencies>
         <dependency>
             <groupId>com.lightningfirefly</groupId>
-            <artifactId>game-api</artifactId>
+            <artifactId>engine-adapter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
