--- a/lightning-engine/webservice/quarkus-web-api/src/main/resources/application.properties
+++ b/lightning-engine/webservice/quarkus-web-api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.application.name=lightningfirefly-api
 # Container image configuration
 quarkus.container-image.group=samantha
 quarkus.container-image.name=quarkus-web-api
-quarkus.container-image.tag=0.0.1-SNAPSHOT
+quarkus.container-image.tag=0.0.2
 
 # HTTP configuration
 quarkus.http.port=8080
