--- a/lightning-engine-extensions/modules/entity-module/pom.xml
+++ b/lightning-engine-extensions/modules/entity-module/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>ca.samanthaireland</groupId>
         <artifactId>engine-ext-modules</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>entity-module</artifactId>
