--- a/lightning-engine-extensions/modules/pom.xml
+++ b/lightning-engine-extensions/modules/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>ca.samanthaireland</groupId>
         <artifactId>backend</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.2</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -38,17 +38,17 @@
             <dependency>
                 <groupId>ca.samanthaireland</groupId>
                 <artifactId>engine</artifactId>
-                <version>0.0.1-SNAPSHOT</version>
+                <version>0.0.2</version>
             </dependency>
             <dependency>
                 <groupId>ca.samanthaireland</groupId>
                 <artifactId>utils</artifactId>
-                <version>0.0.1-SNAPSHOT</version>
+                <version>0.0.2</version>
             </dependency>
             <dependency>
                 <groupId>ca.samanthaireland</groupId>
                 <artifactId>entity-module</artifactId>
-                <version>0.0.1-SNAPSHOT</version>
+                <version>0.0.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
