--- a/lightning-engine/engine-adapter/game-sdk/pom.xml
+++ b/lightning-engine/engine-adapter/game-sdk/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>ca.samanthaireland</groupId>
         <artifactId>engine-adapter</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>game-sdk</artifactId>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>ca.samanthaireland</groupId>
             <artifactId>web-api-adapter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.2</version>
             <scope>compile</scope>
         </dependency>
 
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>ca.samanthaireland</groupId>
             <artifactId>engine-rendering-test</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
