--- a/lightning-engine/rendering-core/pom.xml
+++ b/lightning-engine/rendering-core/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>ca.samanthaireland</groupId>
         <artifactId>backend</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.2</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
