--- a/lightning-engine/webservice/issue-api-token/pom.xml
+++ b/lightning-engine/webservice/issue-api-token/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>ca.samanthaireland</groupId>
         <artifactId>backend</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>issue-api-token</artifactId>
