--- a/lightning-engine/webservice/pom.xml
+++ b/lightning-engine/webservice/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>ca.samanthaireland</groupId>
         <artifactId>lightning-engine</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>webservice</artifactId>
