--- a/lightning-engine/webservice/quarkus-web-api/pom.xml
+++ b/lightning-engine/webservice/quarkus-web-api/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>ca.samanthaireland</groupId>
         <artifactId>backend</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.2</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
 
@@ -469,7 +469,7 @@
                                         <argument>-f</argument>
                                         <argument>lightning-engine/webservice/quarkus-web-api/Dockerfile.prebuilt</argument>
                                         <argument>-t</argument>
-                                        <argument>samanthacireland/lightning-engine:0.0.1</argument>
+                                        <argument>samanthacireland/lightning-engine:0.0.2</argument>
                                         <argument>.</argument>
                                     </arguments>
                                 </configuration>
