--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <groupId>ca.samanthaireland</groupId>
     <artifactId>backend</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2</version>
     <packaging>pom</packaging>
 
     <name>backend</name>
@@ -153,7 +153,7 @@
                     <configuration>
                         <images>
                             <image>
-                                <name>samanthacireland/lightning-engine:0.0.1-lean</name>
+                                <name>samanthacireland/lightning-engine:0.0.2-lean</name>
                                 <build>
                                     <dockerFile>${project.basedir}/Dockerfile</dockerFile>
                                     <contextDir>${project.basedir}</contextDir>
