--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,206 +1,206 @@
-# This workflow will build a Java project with Maven, run frontend tests, and run Playwright acceptance tests.
-name: Java CI with Maven
+# # This workflow will build a Java project with Maven, run frontend tests, and run Playwright acceptance tests.
+# name: Java CI with Maven
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
 
-jobs:
-  build:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
+# jobs:
+#   build:
+#     runs-on: ubuntu-22.04
+#     steps:
+#       - uses: actions/checkout@v4
 
-      - name: Set up JDK 25
-        uses: actions/setup-java@v4
-        with:
-          java-version: '25'
-          distribution: 'temurin'
-          cache: maven
+#       - name: Set up JDK 25
+#         uses: actions/setup-java@v4
+#         with:
+#           java-version: '25'
+#           distribution: 'temurin'
+#           cache: maven
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
+#       - name: Set up Python
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: '3.x'
 
-      - name: Generate JWT keys
-        run: ./build.sh secrets
+#       - name: Generate JWT keys
+#         run: ./build.sh secrets
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: lightning-engine/webservice/quarkus-web-api/src/main/frontend/package-lock.json
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '20'
+#           cache: 'npm'
+#           cache-dependency-path: lightning-engine/webservice/quarkus-web-api/src/main/frontend/package-lock.json
 
-      - name: Run frontend tests with coverage
-        run: ./build.sh frontend-test
+#       - name: Run frontend tests with coverage
+#         run: ./build.sh frontend-test
 
-      - name: Upload frontend coverage report
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-coverage-report
-          path: lightning-engine/webservice/quarkus-web-api/src/main/frontend/coverage
-          retention-days: 14
+#       - name: Upload frontend coverage report
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: frontend-coverage-report
+#           path: lightning-engine/webservice/quarkus-web-api/src/main/frontend/coverage
+#           retention-days: 14
 
-      - name: Build and test
-        run: ./build.sh test
+#       - name: Build and test
+#         run: ./build.sh test
 
-#  playwright-tests:
-#    runs-on: ubuntu-22.04
-#    needs: build
-#
-#    steps:
-#      - uses: actions/checkout@v4
-#
-#      - name: Set up JDK 25
-#        uses: actions/setup-java@v4
-#        with:
-#          java-version: '25'
-#          distribution: 'temurin'
-#          cache: maven
-#
-#      - name: Set up Python
-#        uses: actions/setup-python@v5
-#        with:
-#          python-version: '3.x'
-#
-#      - name: Generate JWT keys
-#        run: python gen_secrets.py
-#
-#      - name: Set up Node.js
-#        uses: actions/setup-node@v4
-#        with:
-#          node-version: '20'
-#          cache: 'npm'
-#          cache-dependency-path: lightning-engine/webservice/quarkus-web-api/src/main/frontend/package-lock.json
-#
-#      - name: Install frontend dependencies
-#        working-directory: lightning-engine/webservice/quarkus-web-api/src/main/frontend
-#        run: npm ci
-#
-#      - name: Build frontend
-#        working-directory: lightning-engine/webservice/quarkus-web-api/src/main/frontend
-#        run: npm run build
-#
-#      - name: Build and install all modules
-#        run: mvn clean install -DskipTests -Pdocker
-#
-#      - name: Build Docker image for Quarkus API
-#        run: mvn -B package -DskipTests -Dquarkus.container-image.build=true -pl lightning-engine/webservice/quarkus-web-api
-#
-#      - name: Tag Docker image for Playwright tests
-#        run: docker tag samantha/quarkus-web-api:0.0.1-SNAPSHOT samanthacireland/lightning-engine:0.0.2
-#
-#      - name: Install Playwright browsers and system dependencies
-#        run: npx playwright install chromium --with-deps
-#
-#      - name: Run Playwright dashboard tests
-#        run: mvn -B verify -Pacceptance-tests -pl lightning-engine/webservice/playwright-test
-#
-#      - name: Upload Playwright test results
-#        uses: actions/upload-artifact@v4
-#        if: always()
-#        with:
-#          name: playwright-test-results
-#          path: |
-#            lightning-engine/webservice/playwright-test/target/failsafe-reports
-#            lightning-engine/webservice/playwright-test/target/screenshots
-#          retention-days: 14
+# #  playwright-tests:
+# #    runs-on: ubuntu-22.04
+# #    needs: build
+# #
+# #    steps:
+# #      - uses: actions/checkout@v4
+# #
+# #      - name: Set up JDK 25
+# #        uses: actions/setup-java@v4
+# #        with:
+# #          java-version: '25'
+# #          distribution: 'temurin'
+# #          cache: maven
+# #
+# #      - name: Set up Python
+# #        uses: actions/setup-python@v5
+# #        with:
+# #          python-version: '3.x'
+# #
+# #      - name: Generate JWT keys
+# #        run: python gen_secrets.py
+# #
+# #      - name: Set up Node.js
+# #        uses: actions/setup-node@v4
+# #        with:
+# #          node-version: '20'
+# #          cache: 'npm'
+# #          cache-dependency-path: lightning-engine/webservice/quarkus-web-api/src/main/frontend/package-lock.json
+# #
+# #      - name: Install frontend dependencies
+# #        working-directory: lightning-engine/webservice/quarkus-web-api/src/main/frontend
+# #        run: npm ci
+# #
+# #      - name: Build frontend
+# #        working-directory: lightning-engine/webservice/quarkus-web-api/src/main/frontend
+# #        run: npm run build
+# #
+# #      - name: Build and install all modules
+# #        run: mvn clean install -DskipTests -Pdocker
+# #
+# #      - name: Build Docker image for Quarkus API
+# #        run: mvn -B package -DskipTests -Dquarkus.container-image.build=true -pl lightning-engine/webservice/quarkus-web-api
+# #
+# #      - name: Tag Docker image for Playwright tests
+# #        run: docker tag samantha/quarkus-web-api:0.0.1-SNAPSHOT samanthacireland/lightning-engine:0.0.2
+# #
+# #      - name: Install Playwright browsers and system dependencies
+# #        run: npx playwright install chromium --with-deps
+# #
+# #      - name: Run Playwright dashboard tests
+# #        run: mvn -B verify -Pacceptance-tests -pl lightning-engine/webservice/playwright-test
+# #
+# #      - name: Upload Playwright test results
+# #        uses: actions/upload-artifact@v4
+# #        if: always()
+# #        with:
+# #          name: playwright-test-results
+# #          path: |
+# #            lightning-engine/webservice/playwright-test/target/failsafe-reports
+# #            lightning-engine/webservice/playwright-test/target/screenshots
+# #          retention-days: 14
 
-  integration-tests:
-    runs-on: ubuntu-22.04
-    needs: build
+#   integration-tests:
+#     runs-on: ubuntu-22.04
+#     needs: build
 
-    steps:
-      - uses: actions/checkout@v4
+#     steps:
+#       - uses: actions/checkout@v4
 
-      - name: Set up JDK 25
-        uses: actions/setup-java@v4
-        with:
-          java-version: '25'
-          distribution: 'temurin'
-          cache: maven
+#       - name: Set up JDK 25
+#         uses: actions/setup-java@v4
+#         with:
+#           java-version: '25'
+#           distribution: 'temurin'
+#           cache: maven
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
+#       - name: Set up Python
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: '3.x'
 
-      - name: Generate JWT keys
-        run: ./build.sh secrets
+#       - name: Generate JWT keys
+#         run: ./build.sh secrets
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: lightning-engine/webservice/quarkus-web-api/src/main/frontend/package-lock.json
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '20'
+#           cache: 'npm'
+#           cache-dependency-path: lightning-engine/webservice/quarkus-web-api/src/main/frontend/package-lock.json
 
-      - name: Build frontend
-        run: ./build.sh frontend
+#       - name: Build frontend
+#         run: ./build.sh frontend
 
-      - name: Build and install all modules
-        run: ./build.sh build
+#       - name: Build and install all modules
+#         run: ./build.sh build
 
-      - name: Build Docker image and run integration tests
-        run: ./build.sh integration-test
+#       - name: Build Docker image and run integration tests
+#         run: ./build.sh integration-test
 
-      - name: Upload integration test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: integration-test-results
-          path: |
-            lightning-engine/api-acceptance-test/target/failsafe-reports
-            lightning-engine/api-acceptance-test/target/surefire-reports
-          retention-days: 14
+#       - name: Upload integration test results
+#         uses: actions/upload-artifact@v4
+#         if: always()
+#         with:
+#           name: integration-test-results
+#           path: |
+#             lightning-engine/api-acceptance-test/target/failsafe-reports
+#             lightning-engine/api-acceptance-test/target/surefire-reports
+#           retention-days: 14
 
-  e2e-tests:
-    runs-on: ubuntu-22.04
-    needs: build
+#   e2e-tests:
+#     runs-on: ubuntu-22.04
+#     needs: build
 
-    steps:
-      - uses: actions/checkout@v4
+#     steps:
+#       - uses: actions/checkout@v4
 
-      - name: Set up JDK 25
-        uses: actions/setup-java@v4
-        with:
-          java-version: '25'
-          distribution: 'temurin'
-          cache: maven
+#       - name: Set up JDK 25
+#         uses: actions/setup-java@v4
+#         with:
+#           java-version: '25'
+#           distribution: 'temurin'
+#           cache: maven
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.22'
-          cache-dependency-path: thunder-cli/go.sum
+#       - name: Set up Go
+#         uses: actions/setup-go@v5
+#         with:
+#           go-version: '1.22'
+#           cache-dependency-path: thunder-cli/go.sum
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
+#       - name: Set up Python
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: '3.x'
 
-      - name: Generate JWT keys
-        run: ./build.sh secrets
+#       - name: Generate JWT keys
+#         run: ./build.sh secrets
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: lightning-engine/webservice/quarkus-web-api/src/main/frontend/package-lock.json
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '20'
+#           cache: 'npm'
+#           cache-dependency-path: lightning-engine/webservice/quarkus-web-api/src/main/frontend/package-lock.json
 
-      - name: Build frontend
-        run: ./build.sh frontend
+#       - name: Build frontend
+#         run: ./build.sh frontend
 
-      - name: Build and install all modules
-        run: ./build.sh build
+#       - name: Build and install all modules
+#         run: ./build.sh build
 
-      - name: Build Docker images
-        run: ./build.sh docker
+#       - name: Build Docker images
+#         run: ./build.sh docker
 
-      - name: Run E2E tests (Thunder CLI)
-        run: ./build.sh e2e-test
+#       - name: Run E2E tests (Thunder CLI)
+#         run: ./build.sh e2e-test
