--- a/thunder/auth/provider/src/test/resources/application.properties
+++ b/thunder/auth/provider/src/test/resources/application.properties
@@ -56,6 +56,14 @@ auth.oauth2.clients[3].allowed-scopes=*
 auth.oauth2.clients[3].allowed-grant-types=password,refresh_token,token_exchange
 auth.oauth2.clients[3].enabled=true
 
+auth.oauth2.clients[4].client-id=thunder-engine
+auth.oauth2.clients[4].client-secret=thunder-engine-test-secret
+auth.oauth2.clients[4].client-type=confidential
+auth.oauth2.clients[4].display-name=Thunder Engine
+auth.oauth2.clients[4].allowed-scopes=module.token.issue,module.token.refresh,module.token.verify,service.match-token.validate
+auth.oauth2.clients[4].allowed-grant-types=client_credentials,urn:stormstack:grant-type:module-token
+auth.oauth2.clients[4].enabled=true
+
 # Rate limiting - disabled for faster tests
 auth.ratelimit.enabled=false
 auth.ratelimit.max-attempts-per-window=100
